bk_ida/gccida/c1/default_conversion
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/default_conversion/src/c-typeck.c:1431:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/default_conversion/src/c-typeck.c:1433:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node **v16; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/default_conversion/src/c-typeck.c:1502:20: error: expected expression
v14 = ( tree_node *)*( &global_trees + 25); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/default_conversion/src/c-typeck.c:1502:9: error: use of undeclared identifier 'tree_node'
v14 = ( tree_node *)*( &global_trees + 25); 
        ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/default_conversion/src/obj/c-typeck.o] Error 1
